test-data/gce3/json-dumps/compute-network-default.json
{
  "autoCreateSubnetworks": true,
  "creationTimestamp": "2020-08-10T11:20:50.139-07:00",
  "description": "Default network for the project",
  "id": "5984955350541676269",
  "kind": "compute#network",
  "name": "default",
  "networkFirewallPolicyEnforcementOrder": "AFTER_CLASSIC_FIREWALL",
  "peerings": [
    {
      "autoCreateRoutes": true,
      "exchangeSubnetRoutes": true,
      "exportCustomRoutes": true,
      "exportSubnetRoutesWithPublicIp": true,
      "importCustomRoutes": true,
      "importSubnetRoutesWithPublicIp": false,
      "name": "peering-y7b5777b682d5ba4bp-tp-default",
      "network": "https://www.googleapis.com/compute/v1/projects/REDACTED/global/networks/servicenetworking",
      "stackType": "IPV4_ONLY",
      "state": "ACTIVE",
      "stateDetails": "[2024-02-10T04:29:01.768-08:00]: Connected."
    },
    {
      "autoCreateRoutes": true,
      "exchangeSubnetRoutes": true,
      "exportCustomRoutes": false,
      "exportSubnetRoutesWithPublicIp": false,
      "importCustomRoutes": false,
      "importSubnetRoutesWithPublicIp": false,
      "name": "servicenetworking-googleapis-com",
      "network": "https://www.googleapis.com/compute/v1/projects/REDACTED/global/networks/servicenetworking",
      "stackType": "IPV4_ONLY",
      "state": "ACTIVE",
      "stateDetails": "[2023-01-13T21:36:22.520-08:00]: Connected."
    }
  ],
  "routingConfig": {
    "routingMode": "REGIONAL"
  },
  "selfLink": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/global/networks/default",
  "selfLinkWithId": "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/global/networks/5984955350541676269",
  "subnetworks": [
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-southwest1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-central1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-east4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-northeast3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/australia-southeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/northamerica-northeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-north1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/southamerica-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-southeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west10/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-west8/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west3/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west6/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-east1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-east5/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/me-central2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-southeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/southamerica-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-east2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-west4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/me-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/africa-south1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/me-central1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west8/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-northeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-northeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west9/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-west1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/northamerica-northeast1/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-east7/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-central2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/australia-southeast2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west4/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-west2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/asia-south2/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/europe-west12/subnetworks/default",
    "https://www.googleapis.com/compute/v1/projects/gcpdiag-gce3-aaaa/regions/us-west3/subnetworks/default"
  ]
}
